src/test/resources/parse-error/fun-expr.c
int g(int x);

int f(int x) {
  return x + g;
}
